package com.example.security8.entity;

public enum Role {
	ADMIN, USER
}